manifests/infrastructure/cluster-network-configs/virtualservice-grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  hosts:
    - "zaap.nandi.sh"
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 80
