manifests/infrastructure/cluster-network-configs/virtualservice-longhorn.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: longhorn
  namespace: longhorn
spec:
  hosts:
    - "zaap.nandi.sh"
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /longhorn
      route:
        - destination:
            host: longhorn-frontend.longhorn.svc.cluster.local
            port:
              number: 80
