manifests/infrastructure/cluster-network-configs/virtualservice-prometheus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: prometheus
spec:
  hosts:
    - "zaap.nandi.sh"
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: prometheus-server.prometheus.svc.cluster.local
            port:
              number: 80
